--- a/walkthroughs/1A-integrate-event-and-api-driven-apps/walkthrough.adoc
+++ b/walkthroughs/1A-integrate-event-and-api-driven-apps/walkthrough.adoc
@@ -6,7 +6,7 @@
 [id='integrating-eventdriven-and-apidriven-applications']
 = {walkthrough}
 
-// word count range that fits best is 15-22, with 20 really being the sweet spot. Character count for that space would be 100-125
+// word count that fits best is 15-22, with 20 really being the sweet spot. Character count for that space would be 100-125
 This Solution Pattern demonstrates a fault tolerant integration pattern that integrates a message driven architecture with a RESTful API architecture.
 
 Message-oriented middleware (MOM)::
