--- a/content/1-connecting-apps-asynchronous-messaging/walkthrough.adoc
+++ b/content/1-connecting-apps-asynchronous-messaging/walkthrough.adoc
@@ -3,15 +3,16 @@
 :amq-version: 7.4
 
 //static
-:tasksdir: _tasks/
+:tasksdir: ../_tasks/
 :title: Connecting applications using asynchronous messaging
+:create-messages-app: Order Entry System
+:retrieve-messages-app: Order Management System
 :standard-fail-text: Verify that you followed all the steps. If you continue to have issues, contact your administrator.
 :fuse-documentation-url: https://access.redhat.com/documentation/en-us/red_hat_fuse/{fuse-version}/
 :amq-documentation-url: https://access.redhat.com/documentation/en-us/red_hat_amq/{amq-version}/
 
 
-[id='1-connecting-apps-asynchronous-messaging']
-
+[#1-connecting-apps-asynchronous-messaging]
 = {title}
 
 // word count that fits best is 15-22, with 20 really being the sweet spot. Character count for that space would be 100-125
@@ -20,8 +21,8 @@ Learn how to create a simple integration with built-in monitoring, so you can en
 == Welcome to Cruddy’s
 In this Solution Pattern, you will be using two applications from a fictitious company called Cruddy’s Car Parts. Both applications are built with PatternFly, an open source design system, and Node.js.
 
-* Order Entry System - Provides a RESTful API and a user interface to create order messages for customers.
-* Order Management System - Uses a RESTful API that is built with Red Hat Fuse for querying and creating orders in an underlying PostgreSQL database.
+* {create-messages-app} - Provides a RESTful API and a user interface to create order messages for customers.
+* {retrieve-messages-app} - Uses a RESTful API that is built with Red Hat Fuse for querying and creating orders in an underlying PostgreSQL database.
 
 image::images/arch.png[integration, role="integr8ly-img-responsive"]
 
