--- a/content/_tasks/using-the-integration.adoc
+++ b/content/_tasks/using-the-integration.adoc
@@ -1,23 +1,23 @@
 [time=5]
-[id='using-the-application-integration']
+[#using-the-integration]
 == Using the integration
 :context: using-the-application-integration
 
-After setting up the integration between the Order Entry System and Order Management System, use the integration to create a new order.
+After setting up the integration between the {create-messages-app} and {retrieve-messages-app}, use the integration to create a new order.
 
 :node-url: http://frontend-node-app.apps.city.openshiftworkshop.com/
 :spring-url: http://spring-boot-rest-http-crud-spring-app.apps.city.openshift
 workshop.com/
 :fuse-url: https://eval.apps.city.openshiftworkshop.com/
 
-. Navigate to the link:{route-order-entry-ui-host}[Order Entry System, window="_blank", id="{context}-1"].
+. Navigate to the link:{route-order-entry-ui-host}[{create-messages-app}, window="_blank", id="{context}-1"].
 . Click the *Create an order* button.
 . Enter a value for *Part Name*, e.g `Engine`, and a quantity, e.g `1`.
 . Click *Save*.
 
-. Navigate to the link:{route-order-management-ui-host}[Order Management System, window="_blank", id="{context}-2"].
+. Navigate to the link:{route-order-management-ui-host}[{retrieve-messages-app}, window="_blank", id="{context}-2"].
 
-. Check that the entry from the Order Entry System is listed in the Order Management System.
+. Check that the entry from the {create-messages-app} is listed in the {retrieve-messages-app}.
 
 
 [type=verification]
