Updated folder names

--- a/walkthroughs/1-connecting-apps-asynchronous-messaging/walkthrough.adoc
+++ b/walkthroughs/1-connecting-apps-asynchronous-messaging/walkthrough.adoc
@@ -1,16 +1,17 @@
-// update these for each release
+// update the component versions for each release
 :fuse-version: 7.4
 :amq-version: 7.4
 
-//static
+// URLs
+:fuse-documentation-url: https://access.redhat.com/documentation/en-us/red_hat_fuse/{fuse-version}/
+:amq-documentation-url: https://access.redhat.com/documentation/en-us/red_hat_amq/{amq-version}/
+
+//attributes
 :title: Connecting applications using asynchronous messaging
 :tasksdir: ../_tasks/
 :create-messages-app: Order Entry System
 :retrieve-messages-app: Order Management System
 :standard-fail-text: Verify that you followed all the steps. If you continue to have issues, contact your administrator.
-:fuse-documentation-url: https://access.redhat.com/documentation/en-us/red_hat_fuse/{fuse-version}/
-:amq-documentation-url: https://access.redhat.com/documentation/en-us/red_hat_amq/{amq-version}/
-
 
 [#1-connecting-apps-asynchronous-messaging]
 = {title}
